        - removed duplicate complementary, added region role to the widgets
     commit #16.5.2
        ==speed booster == delete gmpg and pingback direct html from header.php
    Oaron dd. 24 Apr.
        ==coding standard == use home() instead of get_site_url()
    commit # 16.5.4
        - add image list to sitepmap
        - change font awesome to verion 4.6.0 (included new accessiblilty icons)
        -header: delete gmpg and pingback links.
    commit #16.5.6
        13 May, 2016
        -css: delete comment border (empty comment shows horizontal line), remove an !important, where not necessary
        -header.php delete yoast breadcrumb. Change manduca_breadcrumb function, if necessary.
        ==accessibility== add underline to widget links.
        -remove login redirect after signup
        ==accessibility==add icons instead of ascii.
    
    commit #16.5.7
        14 May, 2016
        ==better typography==
            -remove display two column.
            - Check line-height,
            - add rem base to font-size,
            - remove undeline in links, instead use border
    
    commit #16.5.8
        18 May, 2016
        fixing errors show up while testing
        - add list style to widget
        - add q, tt elements
        - redesign code element
    
    commit #16.5.9
    20 May, 2016
        - fixing errors show up while testing
        =accessiblilty==
            -change assistive text on single post
            -add Ubuntu font family as fallback
            -clean up breadcrumb
            -add more understandable title to search page
        ==typography==
            (inspiration: https://www.smashingmagazine.com/2009/04/8-simple-ways-to-improve-typography-in-your-designs/)
            -font size and line height calibration
            -heading size calibration
            -invert archive titles
        ==design==
            -adopt colours to color palette
        -add translations to new texts. 
        
        